--- a/Marlin/Views/Main/ScriptPage.xaml
+++ b/Marlin/Views/Main/ScriptPage.xaml
@@ -162,22 +162,106 @@
                                        Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                        Text="Взаимодействие:"/>
 
-                            <Grid Grid.Column="1"
-                                  Margin="0,10,0,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition Width="auto"/>
-                                </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="{Binding Path=LengthAsync,UpdateSourceTrigger=PropertyChanged}"/>
+                                    <RowDefinition Height="auto"/>
+                                </Grid.RowDefinitions>
 
-                                <TextBlock Grid.Column="0"  
+                                <Grid Grid.Row="0"
+                                  Margin="0,10,0,5">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0"  
                                                FontSize="15"
                                                Margin="0,0,10,0"
                                                Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                                Text="Защитить паролем"/>
 
-                                <CheckBox Grid.Column="1"
+                                    <CheckBox Grid.Column="1"
                                           IsChecked="{Binding Path=Checkpuss,UpdateSourceTrigger=PropertyChanged}"/>
+                                </Grid>
+
+                                <Grid Grid.Row="1"
+                                  Margin="0,10,0,5">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0"  
+                                               FontSize="15"
+                                               Margin="0,0,10,0"
+                                               Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
+                                               Text="Выполнять асинхронно"/>
+
+                                    <CheckBox Grid.Column="1"
+                                              IsChecked="{Binding Path=Async,UpdateSourceTrigger=PropertyChanged}"/>
+                                </Grid>
+
+                                <Grid Grid.Row="2"
+                                      Margin="0,5">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="20"/>
+                                        <ColumnDefinition Width="25"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0"
+                                               FontSize="15"
+                                               Margin="0,0,4,0"
+                                               VerticalAlignment="Center"
+                                               HorizontalAlignment="Center"
+                                               Text="Задержка между командами"/>
+
+                                    <TextBlock Grid.Column="1"
+                                               FontSize="15"
+                                               Padding="0,5"
+                                               Margin="0,0,1,0"
+                                               HorizontalAlignment="Center"
+                                               Text="{Binding Path=TimeDeley}"/>
+
+                                    <TextBlock Grid.Column="2"
+                                               FontSize="15"
+                                               VerticalAlignment="Center"
+                                               HorizontalAlignment="Left"
+                                               Text="c."/>
+
+                                    <Slider Grid.Column="3" 
+                                            Width="100" 
+                                            Margin="0,0,15,0"
+                                            Minimum="0" 
+                                            TickFrequency="1"
+                                            VerticalAlignment="Center"
+                                            Maximum="60"
+                                            Value="{Binding Path=TimeDeley}"/>
+                                </Grid>
+
+                                <Grid Grid.Row="3"
+                                  Margin="0,10,0,5">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0"  
+                                               FontSize="15"
+                                               Margin="0,0,10,0"
+                                               Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
+                                               Text="Выполнять зацикленно"/>
+
+                                    <CheckBox Grid.Column="1"
+                                              IsChecked="{Binding Path=Loop,UpdateSourceTrigger=PropertyChanged}"/>
+                                </Grid>
                             </Grid>
+
+                            
                         </Grid>
 
                         <Grid Grid.Row="3"
