--- a/Marlin/Views/Main/ActionsPage.xaml
+++ b/Marlin/Views/Main/ActionsPage.xaml
@@ -109,6 +109,7 @@
                             Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
+                        
                         <TextBlock Background="Transparent"
                                    Margin="5"
                                    Foreground="{Binding Path=PageColor}"
@@ -126,22 +127,23 @@
                             Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
+                        
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
-                                       Margin="15,10,0,0"
+                                       Margin="15,10,0,15"
                                        Foreground="{Binding Path=PageColor}"
                                        HorizontalAlignment="Left"
                                        FontWeight="Bold"
                                        Text="Команды:"/>
 
                             <ScrollViewer Grid.Row="1" 
-                                          Margin="0,0,0,10"
+                                          Margin="0,-10,0,10"
                                           VerticalScrollBarVisibility="Hidden"
                                           HorizontalAlignment="Stretch"
                                           Content="{Binding Path=ScriptCommandPanel,UpdateSourceTrigger=PropertyChanged}"/>
@@ -154,15 +156,16 @@
                             Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
+                        
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
-                                       Margin="15,10,0,0"
+                                       Margin="15,10,0,10"
                                        Foreground="{Binding Path=PageColor}"
                                        HorizontalAlignment="Left"
                                        FontWeight="Bold"
@@ -170,9 +173,10 @@
 
                             <ScrollViewer Grid.Row="1"
                                           VerticalScrollBarVisibility="Hidden">
+                                
                                 <TextBlock Text="{Binding Path=Description,UpdateSourceTrigger=PropertyChanged}"
                                        FontSize="15"
-                                       Margin="10,5"
+                                       Margin="10,-10,10,5"
                                        Padding="10"
                                        HorizontalAlignment="Stretch"
                                        TextWrapping="Wrap"/>
@@ -186,22 +190,23 @@
                             Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                             BorderThickness="2">
+                        
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
-                                       Margin="15,10,0,0"
+                                       Margin="15,10,0,15"
                                        Foreground="{Binding Path=PageColor}"
                                        HorizontalAlignment="Left"
                                        FontWeight="Bold"
                                        Text="Триггеры:"/>
 
                             <ScrollViewer Grid.Row="1"
-                                          Margin="0,0,0,10"
+                                          Margin="0,-10,0,10"
                                           VerticalScrollBarVisibility="Hidden"
                                           HorizontalAlignment="Stretch"
                                           Content="{Binding Path=TriggerPanel,UpdateSourceTrigger=PropertyChanged}"/>
