--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -467,8 +467,7 @@
                                                       Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="20"/>
-                                                        <ColumnDefinition Width="25"/>
+                                                        <ColumnDefinition Width="50"/>
                                                         <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
@@ -479,18 +478,25 @@
                                                                HorizontalAlignment="Center"
                                                                Text="Перепроверять пароль через"/>
 
-                                                    <TextBlock Grid.Column="1"
-                                                               FontSize="15"
-                                                               Padding="0,5"
-                                                               Margin="0,0,1,0"
-                                                               HorizontalAlignment="Center"
-                                                               Text="{Binding Path=TimeCheckPassword}"/>
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="auto"/>
+                                                            <ColumnDefinition Width="25"/>
+                                                        </Grid.ColumnDefinitions>
 
-                                                    <TextBlock Grid.Column="2"
-                                                           FontSize="15"
-                                                           VerticalAlignment="Center"
-                                                           HorizontalAlignment="Left"
-                                                           Text="c."/>
+                                                        <TextBlock Grid.Column="0"
+                                                                   FontSize="15"
+                                                                   Padding="0,5"
+                                                                   Margin="0,0,3,0"
+                                                                   HorizontalAlignment="Center"
+                                                                   Text="{Binding Path=TimeCheckPassword}"/>
+
+                                                        <TextBlock Grid.Column="1"
+                                                                   FontSize="15"
+                                                                   VerticalAlignment="Center"
+                                                                   HorizontalAlignment="Left"
+                                                                   Text="c."/>
+                                                    </Grid>
 
                                                     <Slider Grid.Column="3" 
                                                             Width="100" 
@@ -498,7 +504,7 @@
                                                             Minimum="0" 
                                                             TickFrequency="1"
                                                             VerticalAlignment="Center"
-                                                            Maximum="60"
+                                                            Maximum="300"
                                                             Value="{Binding Path=TimeCheckPassword}"/>
                                                 </Grid>
 
